--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             </div>
           </div>
           <div class="col-6 m-auto">
-            <a href="#" class="btn btn-secondary border">Play</a>
+            <div class="cont d-flex justify-content-between align-items-center">
+              <p class="m-0 p-0">Punteggio:</p><span id="punteggio"></span>
+              <a href="#" class="btn btn-secondary">Play</a>
+            </div>
           </div>
         </div>
       </section>
